objects/AR_Dashboard__c.object
<CustomObject>
    <fields>
        <fullName>Author__c</fullName>
        <label>Author</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>DL_Category__c</fullName>
        <label>DL_Category</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DL_CreatedTime__c</fullName>
        <label>DL_CreatedTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>DL_Duration__c</fullName>
        <label>DL_Duration</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dep_BackUp__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Deployment Backup</inlineHelpText>
        <label>Dep_BackUp</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Dep_MetadataTypes__c</fullName>
        <inlineHelpText>Deployment MetadataTypes</inlineHelpText>
        <label>Dep_MetadataTypes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Dep_SourceType__c</fullName>
        <inlineHelpText>Deployment Source Type</inlineHelpText>
        <label>Dep_SourceType</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dep_Step__c</fullName>
        <inlineHelpText>Deployment Step</inlineHelpText>
        <label>Dep_Step</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dep_TestErrorCount__c</fullName>
        <inlineHelpText>Deployment Test Error Count</inlineHelpText>
        <label>Dep_TestErrorCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Dep_TestSuccessCount__c</fullName>
        <inlineHelpText>Deployment Test Success Count</inlineHelpText>
        <label>Dep_TestSuccessCount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Destination_Org__c</fullName>
        <label>Destination Org</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Error_Count__c</fullName>
        <label>Error Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Label__c</fullName>
        <label>Label</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Process_Type__c</fullName>
        <label>Process Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Data Loader</fullName>
                </value>
                <value>
                    <fullName>Deployments</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Source_Org__c</fullName>
        <label>Source Org</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Start_Time__c</fullName>
        <label>Start Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Success_Count__c</fullName>
        <label>Success Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>AR_Dashboard</label>
    <listViews>
        <fullName>AR_Dashboard</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <filterScope>Everything</filterScope>
        <label>AR-Dashboard</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>AR_Operations</fullName>
        <columns>NAME</columns>
        <columns>Source_Org__c</columns>
        <columns>Destination_Org__c</columns>
        <columns>Dep_SourceType__c</columns>
        <columns>DL_Category__c</columns>
        <columns>Status__c</columns>
        <columns>Start_Time__c</columns>
        <filterScope>Everything</filterScope>
        <label>AR Operations</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>Operation-{00000000}</displayFormat>
        <label>AR_Dashboard#</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>AR_Dashboards</pluralLabel>
    <recordTypes>
        <fullName>Data_Loader</fullName>
        <active>true</active>
        <label>Data Loader</label>
    </recordTypes>
    <recordTypes>
        <fullName>Deployments</fullName>
        <active>true</active>
        <label>Deployments</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>